--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="msg">
                     <h2>Looking forward to the road ahead</h2>
-                    <h3>Thank you for the opportunity</h3>
+                    <h3>Thank you for the opportunity!</h3>
                 </div>
                 <div class="empty">
                 </div>
