--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Thank You</title>
-        <link href="css/style.css" rel="stylesheet">
+        <title>Project</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div class="container">
-            <div class="aurora">
-                <img src="img/aurora.png">
-            </div>
-            <div class="msg">
-                <h2>Looking forward to the road ahead</h2>
-                <h3>Thank you for the opportunity</h3>
-            </div>
-            <div class="empty">
-            </div>
-            <div class="road">
-                <img src="img/road.png">
-            </div>
+        <header>
+            <div class=heading><h1>Web Develloper Wanabee</h1></div>
+            <nav>
+                <a href="iframe/about/about.html" target="iframe" class="button">about</a>
+                <a href = "iframe/parallaxa/parallaxa.html" target="iframe" class="button">travels</a>
+                <a href = "iframe/parallaxb/parallaxb.html" target="iframe" class="button">hobbies</a>
+            </nav>
+        </header>
+        <div class = "content">
+            <iframe height="100%" width="100%" src="iframe/about/about.html" name="iframe"></iframe>
         </div>
     </body>
 </html>
