--- a/iframe/about/about.html
+++ b/iframe/about/about.html
@@ -10,7 +10,7 @@
             body {
                 width: 100%;
                 background-image: url(profil.jpg);
-                background-attachment: fixed;
+                background-attachment: scroll;
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
