--- a/iframe/about/about.html
+++ b/iframe/about/about.html
@@ -10,10 +10,17 @@
             body {
                 width: 100%;
                 background-image: url(profil.jpg);
-                background-attachment: scroll;
+                background-attachment: fixed;
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
+            }
+            @media only screen and (max-device-width: 1024px) {
+                body {
+                    background-attachment: scroll;
+                    height: 100vh;
+                    width: auto;
+                    }
             }
         </style>
     </head>
