--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
     <head>
         <title>Project</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <div class=heading><h1>Web Develloper Wanabee</h1></div>
+            <div class="heading"><h1>Web Develloper Wanabee</h1></div>
             <nav>
-                <a href="iframe/about/about.html" target="iframe" class="button">about</a>
-                <a href = "iframe/parallaxa/parallaxa.html" target="iframe" class="button">travels</a>
-                <a href = "iframe/parallaxb/parallaxb.html" target="iframe" class="button">hobbies</a>
+                <a href="about.html" target="iframe" class="button">about</a>
+                <a href = "travels.html" target="iframe" class="button">travels</a>
+                <a href = "interests.html" target="iframe" class="button">interests</a>
+                <a href = "interests.html" target="iframe" class="button">skills</a>
+                <a href = "interests.html" target="iframe" class="button">contact</a>
             </nav>
         </header>
         <div class = "content">
-            <iframe height="100%" width="100%" src="iframe/about/about.html" name="iframe"></iframe>
+            <iframe src="about.html" name="iframe"></iframe>
         </div>
     </body>
 </html>
