--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <nav>
                 <a href="about.html" target="iframe" class="button">about</a>
                 <a href = "travels.html" target="iframe" class="button">travels</a>
-                <a href = "interests.html" target="iframe" class="button">interests</a>
-                <a href = "interests.html" target="iframe" class="button">skills</a>
-                <a href = "interests.html" target="iframe" class="button">contact</a>
+                <a href = "travels.html" target="iframe" class="button">interests</a>
+                <a href = "travels.html" target="iframe" class="button">skills</a>
+                <a href = "travels.html" target="iframe" class="button">contact</a>
             </nav>
         </header>
         <div class = "content">
