--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
+        <title>Thank You</title>
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <div class="heading"><h1>Web Develloper Wanabee</h1></div>
-            <nav>
-                <a href="about.html" target="iframe" class="button">about</a>
-                <a href = "travels.html" target="iframe" class="button">travels</a>
-                <a href = "travels.html" target="iframe" class="button">interests</a>
-                <a href = "travels.html" target="iframe" class="button">skills</a>
-                <a href = "travels.html" target="iframe" class="button">contact</a>
-            </nav>
-        </header>
-        <div class = "content">
-            <iframe src="about.html" name="iframe"></iframe>
+        <div class="container">
+            <div class="aurora">
+                <img src="img/aurora.png">
+            </div>
+            <div class="msg">
+                <h2>Looking forward to the road ahead</h2>
+                <h3>Thank you for the opportunity</h3>
+            </div>
+            <div class="empty">
+            </div>
+            <div class="road">
+                <img src="img/road.png">
+            </div>
         </div>
     </body>
 </html>
