--- a/project/contact.html
+++ b/project/contact.html
@@ -11,8 +11,8 @@
          </div>
       </div>
       <div class="intro">
-         <h3>Can I actually do anything relevant to web devellopment</h3>
-         <p>Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. </p>
+         <h3>Contact Form</h3>
+         <p>Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form.</p>
       </div>
    </body>
 </html>
