--- a/project/profile.html
+++ b/project/profile.html
@@ -10,9 +10,8 @@
             <span class="border">WHO IS THIS GUY?</span>
          </div>
       </div>
-      <div class="intro">
-         <h3>Can I actually do anything relevant to web devellopment</h3>
-         <p>Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. </p>
+      <div class="about">
+         <p>Name : Virgile<br>Nationality : French<br>Date of Birth : October ‘86<br>Occupation : Vagrant<br>Aspiration : Web-Developer</p>
       </div>
    </body>
 </html>
