--- a/project/skills.html
+++ b/project/skills.html
@@ -37,7 +37,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>I can’t say I have a massive experience but I think we can agree I have a knack for it. Now maybe teaching may not seem relevant to a work environment but teaching is communicating. You need to be able to figure out what your student understand before you can start to share your knowledge. Being able to figure out what anyone’s grasp on something is will be important anytime you need to work as a team.</p>
+            <p>I can’t say I have a massive experience but I think we can agree I have a knack for it. Now maybe teaching does not seem relevant to a work environment but teaching is communicating. You need to be able to figure out what your student understand before you can start to share your knowledge. Being able to figure out what anyone’s grasp on something is, well, that's important anytime you need to work as a team.</p>
          </div>
       </div>
       <div class="bg school">
