--- a/project/travels.html
+++ b/project/travels.html
@@ -21,7 +21,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>I went to Ireland for no good reason when I was 20. I just wanted to leave home and see what’s up. I started getting small jobs, first time working in a call centre, first time working at a hostel, that kinda things. And at that time even small jobs paid decently there so I spent a decent amount of time checking out the countryside, and an indecent amount of times in bars naturally.</p>
+            <p>I went to Ireland for no good reason when I was 20. I just wanted to leave home and see what’s up. I started getting small jobs, first time working in a call centre, first time working at a hostel, that kinda things. And at that time even small jobs paid decently there so I spent a decent amount of time checking out the countryside, and, naturally, an indecent amount of time in pubs.</p>
          </div>
       </div>
       <div class="bg pub">
@@ -37,7 +37,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. </p>
+            <p>After living abroad for the first time, it became pretty clear that I wouldn't stay in my home country for very long from now on. I went to live in Florence, started working in a hostel again, and had a first experience teaching there (more like a French conversation class than actual teaching). It’s also where I drank mate with Argentinian tourists for the first time, which would become important when deciding where to go next.</p>
          </div>
       </div>
       <div class="bg roma">
@@ -53,7 +53,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. </p>
+            <p>On the basis of “sure, why not?” I ended up getting my passport made in Rome in the span of two weeks and moved to Morocco. I learned the importance of hot drinks for social acceptance as pouring and drinking mint tea correctly is probably the number one factor on how to make friends in Marrakesh. I also taught for the second time, reading book to school children in a remote village of the Atlas (I made weird impulse decisions at that time).</p>
          </div>
       </div>
       <div class="bg atlas">
@@ -69,7 +69,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. </p>
+            <p>By then I had to put my theory on the importance of hot drinks to the test so, since I was already introduced to mate, Argentina was naturally my next destination. I spent most of three years between Buenos Aires and Santiago de Chile, again working in hostels, again teaching kids for some random reason, and I was even told by an Uruguayan gaucho that I’m a natural at riding horses (this is a big deal, the test was asking me to roll a cigarette on horseback on my first day).</p>
          </div>
       </div>
       <div class="bg gaucho">
@@ -85,7 +85,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. </p>
+            <p>And here I am, the one good reason I had to move to Germany was that before then I traveled on short 8 month bursts, always having to go back to my mom and work in France before moving on again, and I figured I could just stay in Germany without having to go back. After almost five years I’m starting to ask myself if I could find a job more sustainable than making beds and delivering pizzas. Let’s find out!</p>
          </div>
       </div>
       <div class="bg alex bottom">
