--- a/project/index.html
+++ b/project/index.html
@@ -8,7 +8,7 @@
    <body>
       <header>
          <div class="heading">
-            <h1>Web Developer Wanabee</h1>
+            <h1>Web Developer Wannabe</h1>
          </div>
       </header>
       <nav>
