--- a/project/interests.html
+++ b/project/interests.html
@@ -11,8 +11,8 @@
          </div>
       </div>
       <div class="intro">
-         <h3>Can I actually do anything relevant to web devellopment</h3>
-         <p>Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. Here I talk about why travels were important. </p>
+         <h3>So appart from drinking mate, what are the things that I like?</h3>
+         <p>Let's be real, I want to get into web development because I'm a nerd. And frankly, I really think it’s a good thing. I’m interested in a whole bunch of stuff, and a lot of it can be translated into cool projects. I’m confident I’m not going to run out of ideas to say, build a portfolio, and I’m really looking forward to see what I can make with what I’ll learn.</p>
       </div>
       <div class="bg book">
          <div class="caption">
@@ -21,7 +21,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. </p>
+            <p>That’s a vague title isn’t it? But really, I can’t say that I’m a movie buff or a book nerd, that I’m a fan of Latin American comics or Japanese animation. I just like a good story. Or just a story, I’m not even that difficult. I like a narrative about mundane, real things, but I’m really passionate about fiction. There’s something fascinating that comes with asking “what if” that I will never become tired of.</p>
          </div>
       </div>
       <div class="bg cinema">
@@ -37,7 +37,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. </p>
+            <p>I like games even on a very basic level. Experimenting, figuring out, just playing with possibilities. I’ll probably go on about it later but there’s something that looks very important for development and this is being able to learn from trial and error. Real life isn’t so kind on that regard, you’re not going to learn to drive by smashing into trees. Games allow you to fail, get up, and try again, without having to make a trip to the hospital.</p>
          </div>
       </div>
       <div class="bg flashback">
@@ -53,7 +53,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. </p>
+            <p>See what I did there? So I like stories, and games as a medium allows to add interactivity to the mix. Now we’re talking. When you play a game you can follow a narrative but now as a player, you make your own choices, good stuff. Now you’re probably thinking video-games (and yeah I like those) but the games I’m really into are even nerdier than that. Tabletop role playing games, that’s like, being a hipster, but with games. No computers, just a bunch of grown-ups playing pretends around a table.</p>
          </div>
       </div>
       <div class="bg shadowrun">
@@ -69,7 +69,7 @@
       </div>
       <div class="textsep">
          <div class="info">
-            <p>Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. Here I talk about my experiences in that place. </p>
+            <p>With all that nerdy stuff, I don’t actually want to spend all my time in my cave. I also like, believe it or not, to just go out and say, go for a hike, or a bike ride. Or just go out and see something else than buildings and street lights (and breathe something else than exhaust fumes, I should never have quit smoking). I got those great legs delivering pizzas on a bicycle, I might as well use them.</p>
          </div>
       </div>
       <div class="bg climb bottom">
