--- a/project/contact.html
+++ b/project/contact.html
@@ -10,9 +10,22 @@
             <span class="border">CONTACT ME</span>
          </div>
       </div>
-      <div class="intro">
+      <div class="contact">
          <h3>Contact Form</h3>
-         <p>Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form. Adress email and contact form.</p>
+          <br>
+         <p>You can send me an email at <a href="mailto:virgile@email.com?Subject=Hi%20there">virgile@email.com</a> or you can fill the form below:</p>
+          <br>
+         <div class="container">
+            <form action="mailto:virgile@email.com">
+               <label for="fname">Name</label>
+               <input type="text" id="name" name="name" placeholder="Your name..">
+               <label for="lname">E-mail adress</label>
+               <input type="text" id="email" name="email" placeholder="Your e-mail adress..">
+               <label for="subject">Message</label>
+               <textarea id="Message" name="Message" placeholder="Write your message.." style="height:200px"></textarea>
+               <input type="submit" value="Submit">
+            </form>
+         </div>
       </div>
    </body>
 </html>
