--- a/project/travels.html
+++ b/project/travels.html
@@ -26,7 +26,7 @@
       </div>
       <div class="bg pub">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
@@ -42,7 +42,7 @@
       </div>
       <div class="bg roma">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
@@ -58,7 +58,7 @@
       </div>
       <div class="bg atlas">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
@@ -74,7 +74,7 @@
       </div>
       <div class="bg gaucho">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
