--- a/project/index.html
+++ b/project/index.html
@@ -3,6 +3,7 @@
    <head>
       <title>Project</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
+       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link rel="stylesheet" href="css/style.css">
    </head>
    <body>
@@ -12,11 +13,11 @@
          </div>
       </header>
       <nav>
-         <a href="profile.html" target="iframe" class="button">about</a>
+          <a href="profile.html" target="iframe" class="button"><span class="wide">about</span><span class="narrow"><i class="far fa-question-circle"></i></span></a>
          <a href = "travels.html" target="iframe" class="button">travels</a>
          <a href = "interests.html" target="iframe" class="button">interests</a>
          <a href = "skills.html" target="iframe" class="button">skills</a>
-         <a href = "contact.html" target="iframe" class="button">contact</a>
+         <a href = "contact.html" target="iframe" class="button"><span class="wide">contact</span><span class="narrow"><i class="far fa-envelope"></i></span></a>
       </nav>
       <div class = "content">
          <iframe src="profile.html" name="iframe"></iframe>
