--- a/project/interests.html
+++ b/project/interests.html
@@ -26,7 +26,7 @@
       </div>
       <div class="bg cinema">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
@@ -42,7 +42,7 @@
       </div>
       <div class="bg flashback">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
@@ -58,7 +58,7 @@
       </div>
       <div class="bg shadowrun">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
