--- a/project/skills.html
+++ b/project/skills.html
@@ -26,7 +26,7 @@
       </div>
       <div class="bg youdied">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
@@ -42,7 +42,7 @@
       </div>
       <div class="bg school">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
@@ -58,7 +58,7 @@
       </div>
       <div class="bg drawing">
          <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border scroll">SCROLL DOWN</span>
          </div>
       </div>
       <div class="sep"></div>
