--- a/project/legalstuff.html
+++ b/project/legalstuff.html
@@ -5,13 +5,13 @@
       <link rel="stylesheet" href="css/style.css">
    </head>
    <body>
-      <div class="bg profile top">
+      <div class="bg legal top">
          <div class="caption">
-            <span class="border">WHO IS THIS GUY?</span>
+            <span class="border">LEGAL STUFF</span>
          </div>
       </div>
       <div class="about">
-         <p>Name : Virgile<br>Nationality : French<br>Date of Birth : October ‘86<br>Occupation : Vagrant<br>Aspiration : Web-Developer</p><br><a href="legalstuff.html">imprint and privacy</a>
+         <p>I'm too lazy too copy/paste it :p<br>Sue me!</p>
       </div>
    </body>
 </html>
