--- a/project/legalstuff.html
+++ b/project/legalstuff.html
@@ -11,7 +11,7 @@
          </div>
       </div>
       <div class="about">
-         <p>I'm too lazy too copy/paste it :p<br>Sue me!</p>
+         <p>I'm too lazy too copy/paste it :p<br><br>Sue me!</p>
       </div>
    </body>
 </html>
