--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
          </div>
       </header>
       <nav>
-          <a href="profile.html" target="iframe" class="button"><span class="wide">about</span><span class="narrow"><i class="far fa-question-circle"></i></span></a>
+          <a href="profile.html" target="iframe" class="button"><span class="wide">about me</span><span class="narrow"><i class="far fa-question-circle"></i></span></a>
          <a href = "travels.html" target="iframe" class="button">travels</a>
          <a href = "interests.html" target="iframe" class="button">interests</a>
          <a href = "skills.html" target="iframe" class="button">skills</a>
