--- a/project/interests.html
+++ b/project/interests.html
@@ -74,7 +74,7 @@
       </div>
       <div class="bg climb bottom">
          <div class="caption">
-            <span class="border">COOL!</span>
+            <span class="border">COOL STUFF!</span>
          </div>
       </div>
    </body>
