--- a/project/skills.html
+++ b/project/skills.html
@@ -74,7 +74,7 @@
       </div>
       <div class="bg f42 bottom">
          <div class="caption">
-            <span class="border">COOL!</span>
+            <span class="border">NEAT!</span>
          </div>
       </div>
    </body>
