--- a/project/travels.html
+++ b/project/travels.html
@@ -90,7 +90,7 @@
       </div>
       <div class="bg alex bottom">
          <div class="caption">
-            <span class="border">COOL!</span>
+            <span class="border">LET'S SEE!</span>
          </div>
       </div>
    </body>
