--- a/project/interests.html
+++ b/project/interests.html
@@ -11,7 +11,7 @@
          </div>
       </div>
       <div class="intro">
-         <h3>So appart from drinking mate, what are the things that I like?</h3>
+         <h2>So appart from drinking mate, what are the things that I like?</h2><br>
          <p>Let's be real, I want to get into web development because I'm a nerd. And frankly, I really think it’s a good thing. I’m interested in a whole bunch of stuff, and a lot of it can be translated into cool projects. I’m confident I’m not going to run out of ideas to say, build a portfolio, and I’m really looking forward to see what I can make with what I’ll learn.</p>
       </div>
       <div class="bg book">
