--- a/project/skills.html
+++ b/project/skills.html
@@ -11,7 +11,7 @@
          </div>
       </div>
       <div class="intro">
-         <h3>Is there anything I can do well?</h3>
+         <h2>Is there anything I can do well?</h2><br>
          <p>It can be hard to build a portfolio when you only just started, but I’ll try to demonstrate that the things that I already do well are going to be relevant on my path to become a web develloper.</p>
       </div>
       <div class="bg maze">
