--- a/project/travels.html
+++ b/project/travels.html
@@ -11,7 +11,7 @@
          </div>
       </div>
       <div class="intro">
-         <h3>Where in the world is Virgile Sandiego?</h3>
+         <h2>Where in the world is Virgile Sandiego?</h2><br>
          <p>“Where are you from” is one of the first questions you ask anybody you meet isn't it? Well I’m from a small harbour town in Brittany, France. But maybe more important than where I’m from is where I’ve been. Sure, you usually don’t learn coding on the road, but you still learn a whole bunch of other stuff.</p>
       </div>
       <div class="bg ireland">
