--- a/lynxwebsite/index.html
+++ b/lynxwebsite/index.html
@@ -2,9 +2,14 @@
 <html>
 	<head>
 		<title>Simple Lynx Web Page</title>
+        <style>
+            * {
+                visibility: hidden;
+            }
+        </style>
 	</head>
 	<body>
-		<h1>INDEX<h1>
+        <h1>INDEX</h1>h1>
 		<nav>
 			<a href="index.html">index</a>
 			<a href="page1.html">page 1</a>
@@ -12,6 +17,20 @@
 			<a href="page3.html">page 3</a>
 			<a href="page4.html">page 4</a>
 		</nav>
+        <div>
+            <pre>
+             <p> ____  _            _        _            _       &nbsp
+ |  _ \| |          | |      | |          | |      &nbsp
+ | |_) | | __ _  ___| | __   | | __ _  ___| | __   &nbsp
+ |  _ &lt| |/ _` |/ __| |/ /   | |/ _` |/ __| |/ /   &nbsp
+ | |_) | | (_| | (__|   &lt |__| | (_| | (__|   &lt    &nbsp
+ |____/|_|\__,_|\___|_|\_\____/ \__,_|\___|_|\_\   &nbsp
+                  _  __    __                  __  &nbsp
+                 / |/ /__ / /__    _____  ____/ /__&nbsp
+                /    / -_) __/ |/|/ / _ \/ __/  '_/&nbsp
+               /_/|_/\__/\__/|__,__/\___/_/ /_/\_\ </p>
+            </pre>
+        </div>
 		<div>
 			<h2>A simple web page meant to be displayed with the Lynx text browser.</h2>
 			<p>Just playing around and building the page from scratch with the Nano editor</p>
