Added fake login

--- a/lynxwebsite/page4.html
+++ b/lynxwebsite/page4.html
@@ -4,18 +4,17 @@
 		<title>Simple Lynx Web Page</title>
 	</head>
 	<body>
-		<h1>PAGE 4<h1>
+		<h1>PAGE 1<h1>
 		<nav>
-			<a href="index.html">index</a>
+			<a href="index.html">log-in</a>
 			<a href="page1.html">page 1</a>
-			<a href="page2.html">page 2</a>
-			<a href="page3.html">page 3</a>
-			<a href="page4.html">page 4</a>
+			<a href="page2.html">outer system</a>
+			<a href="page3.html">inner system</a>
+			<a href="page4.html">cowboys</a>
 		</nav>
 		<div>
-			<h2>A simple web page meant to be displayed with the Lynx text browser.</h2>
-			<p>Just playing around and building the page from scratch with the Nano editor</p>
-			<p>Page 4 out of 4</p>
+			<p>We'll get in touch Hot Shot. If you think you're nova hot and intraceable, what are you waiting for? Find us big boy.</p>
+			<p>Page 1 out of 4</p>
 		</div>
 	</body>
 </html>
