--- a/lynxwebsite/page2.html
+++ b/lynxwebsite/page2.html
@@ -4,17 +4,16 @@
 		<title>Simple Lynx Web Page</title>
 	</head>
 	<body>
-		<h1>PAGE 2<h1>
+		<h1>Outer System<h1>
 		<nav>
-			<a href="index.html">index</a>
+			<a href="index.html">log-in</a>
 			<a href="page1.html">page 1</a>
-			<a href="page2.html">page 2</a>
-			<a href="page3.html">page 3</a>
-			<a href="page4.html">page 4</a>
+			<a href="page2.html">outer system</a>
+			<a href="page3.html">inner system</a>
+			<a href="page4.html">cowboys</a>
 		</nav>
 		<div>
-			<h2>A simple web page meant to be displayed with the Lynx text browser.</h2>
-			<p>Just playing around and building the page from scratch with the Nano editor</p>
+			<p>The BlackJack Network is a Belt-born organisation of Freelancers and Cowboys that started as a bounty board. Today it's pretty much the only form of law enforcement you'll encounter in most of the outer system. The Jovian Republic and the Ring Alliance work closely with the Network, meaning that freelancing can score you a serious Rep in the more civilized part of the outer world.</p>
 			<p>Page 2 out of 4</p>
 		</div>
 	</body>
