fixed fake login error

--- a/lynxwebsite/index2.html
+++ b/lynxwebsite/index2.html
@@ -29,6 +29,8 @@
 			<p>ALIAS NOT RECOGNIZED</p>
 			<p>You think you're an Ace, but you're not in contact with the Network yet? Proceed and we'll get in touch.<br>Be warned rookie: the Network is not exactly legal in the inner system and proceeding further will get you flagged by the ISPF.</p>
 			<br>
+		</div>
+		<div>
             <form action="page1.html"><input type="submit" value="Apply">
 </form>
 		</div>
