added latest changes to BlackJack

--- a/blackjack/player.html
+++ b/blackjack/player.html
@@ -19,16 +19,12 @@
     </div>
     <div class="content">
         <div>
-            <h2>The Suits</h2>
-            <p>BlackJack Network is a role playing game about space bounty hunters, nicknamed Cowboys.</p>
-            <p>The BlackJack Network is an agency that provides a bounty board across the solar system.</p>
-            <p>The Network refers to its agents as card suits, according to their specialties.</p>
-            <p>Spades, Hearts and Clubs, sometimes dubbed "action suits", refer to the field agents. In the context of a role-playing games: they're the Players.</p>
-            <p>Diamonds are the liaison agents, providing Cowboys with appropriate bounties. In the context of the game: they're the Game Master.</p>
+            <h2>Pick an Action Suit:</h2>
+            <span id="spade">&spades;</span><span id="heart">&hearts;</span><span id="club">&clubs;</span>
         </div>
-        <form action="suit.html"><input type="submit" class="button" value="NEXT"></form>
-        <form action=""><input type="submit" class="button" value="RELOAD"></form>   
+        <form action="suit.html"><input type="submit" class="button" value="NEXT"></form>    
         
     </div>
+    <form action=""><input type="submit" class="button" value="RELOAD"></form> 
 </body>
 </html>
