--- a/blackjack/suit.html
+++ b/blackjack/suit.html
@@ -19,16 +19,16 @@
     </div>
     <div class="content">
         <div>
-            <h2>The Suits</h2>
-            <p>BlackJack Network is a role playing game about space bounty hunters, nicknamed Cowboys.</p>
-            <p>The BlackJack Network is an agency that provides a bounty board across the solar system.</p>
-            <p>The Network refers to its agents as card suits, according to their specialties.</p>
-            <p>Spades, Hearts and Clubs, sometimes dubbed "action suits", refer to the field agents. In the context of a role-playing games: they're the Players.</p>
-            <p>Diamonds are the liaison agents, providing Cowboys with appropriate bounties. In the context of the game: they're the Game Master.</p>
+            <h2>Players:</h2>
+            <p>Players in BlackJack Network play as space bounty hunters. Within the Network, Cowboys are given a rating in the Action Suits, Spade, Heart and Club. Action Suits represent what a Cowboy is good at.</p>
+            <form action="player.html"><input type="submit" class="button" value="I want to be a Bounty Hunter &spades;&hearts;&clubs;"></form>
         </div>
-        <form action="suit.html"><input type="submit" class="button" value="NEXT"></form>
-        <form action=""><input type="submit" class="button" value="RELOAD"></form>   
-        
+        <div>
+            <h2>Game Master:</h2>
+            <p>The Game Master in BlackJack Network takes up the role of the liaison agent. Liaison agents are given a ranking outside the Action Suits called Diamond ranking. Every bounty has a Diamond rank, representing both the difficulty and how well it pays.</p>
+        </div>
+        <form action="gm.html"><input type="submit" class="button" value="I want to be the liaison agent &diamondsuit;"></form>        
     </div>
+    <form action=""><input type="submit" class="button" value="RELOAD"></form> 
 </body>
 </html>
